# moonship

./: .gitignore  LICENSE  Pipfile  README.md  config-example.yml  config.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
doc/: api.html  api.yaml  diagrams.odg
moonship/: __init__.py  __main__.py  algo.py  config.py  data.py  engine.py  error.py  event.py  launcher.py  market.py  tradeengine.py
moonship/algo/: test.py
moonship/client/: altcointrader.py  binance.py  interface.py  luno.py  paper.py  valr.py  web.py
moonship/core/: __init__.py  api.py  config.py  data.py  engine.py  error.py  ipc.py  launcher.py  market.py  monitor.py  redis.py  service.py  strategy.py
moonship/market/: luno.py  market.py
moonship/strategy/: strategy.py  test.py
