[metadata]
name = moonship
version = attr: moonship.core.__version__
description = High-frequency forex/crypto trading engine
long_description = High-frequency forex/crypto trading engine
author = Marlon Paulse
author_email = mpaulse@gmail.com
license = BSD 2-Clause License
license_file = LICENSE
url = https//github.com/mpaulse/moonship
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial

[options]
packages = find_namespace:
python_requires = >=3.9
install_requires =
    aiohttp
    aiolimiter
    pyyaml
    sortedcontainers

[options.entry_points]
console_scripts =
    moonship = moonship.core:launch
