[metadata]
name = moonship
version = attr: moonship.core.__version__
description = High-frequency cryptocurrency trading engine
long_description = High-frequency cryptocurrency trading engine
author = Marlon Paulse
author_email = mpaulse@gmail.com
license = BSD-2-Clause
license_files =
    LICENSE
url = https//github.com/mpaulse/moonship
platform = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Financial and Insurance Industry
    Operating System :: OS Independent
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial

[options]
packages = find_namespace:
python_requires = >=3.12
install_requires =
    aiohttp
    aiohttp_session[aioredis]
    aiolimiter
    aiosmtplib
    bcrypt
    nanoid
    pyyaml
    redis
    rule-engine
    sortedcontainers

[options.entry_points]
console_scripts =
    moonship = moonship.core:launch
